Fix: z-index修正してtaptostartを改善

--- a/client/src/components/froatButton.css
+++ b/client/src/components/froatButton.css
@@ -20,6 +20,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    z-index: 3000;
 }
 
 .circle-button:hover {
